# test-llm-semantic-enrichment

./: .gitignore  README.md  aerlingus_findings_to_db.py  eda_jupyter.ipynb  excel_compactor.py  export_tables_to_csv.py  iberia_findings_to_db.py  modules.py  modules_ai.py  pyproject.toml  requirements.txt  settings.py
prompts/: extract_description_fields_aerlingus_v0.txt  extract_description_fields_aerlingus_v1.txt  extract_description_fields_iberia.txt  generate_extraction_examples_aerlingus.txt
test/: test_regex.py
