[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.0",
    "langchain-openai>=0.3.28",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "nltk>=3.9.1",
    "openai>=1.97.1",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
]
